# ops-env

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  client.py  compat.py  inference.py  models.py  openenv.yaml  pyproject.toml  scripted_baselines.py
.claude/: settings.local.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
docs/: HF_SPACE.md
scripts/: validate_submission.sh
server/: __init__.py  app.py  grader.py  supportdesk_environment.py  task_data.py
tests/: conftest.py  test_environment.py  test_grader.py
